--- a/projects/music-player/index.html
+++ b/projects/music-player/index.html
@@ -12,7 +12,7 @@
    
    <main class="font-figtree relative">
       <img src="src/seven.jpg" class="thumbnail w-full h-screen object-contain blur-xl" alt="background">
-      <div class="absolute top-14 left-4 right-4 max-w-xs p-5 pb-12 mx-auto rounded-[2.25rem] bg-gray-900/70 backdrop-blur-md shadow-lg">
+      <div class="absolute top-14 left-4 right-4 max-w-xs p-5 pb-8 mx-auto rounded-[2.25rem] bg-gray-900/70 backdrop-blur-md shadow-lg">
          <div>
             <img src="src/seven.jpg" class="thumbnail w-full h-auto rounded-2xl" alt="thumbnail">
          </div>
@@ -44,7 +44,7 @@
                </span>
             </div>
          </div>
-         <div class="flex items-center justify-center mt-3 gap-8">
+         <div class="flex items-center justify-center mt-1 mb-3 gap-8">
             <button class="prev-button rounded-md text-gray-100 focus:outline-none">
                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-9 h-9">
                   <path d="M9.195 18.44c1.25.713 2.805-.19 2.805-1.629v-2.34l6.945 3.968c1.25.714 2.805-.188 2.805-1.628V8.688c0-1.44-1.555-2.342-2.805-1.628L12 11.03v-2.34c0-1.44-1.555-2.343-2.805-1.629l-7.108 4.062c-1.26.72-1.26 2.536 0 3.256l7.108 4.061z" />
@@ -63,6 +63,15 @@
                   <path d="M9.195 18.44c1.25.713 2.805-.19 2.805-1.629v-2.34l6.945 3.968c1.25.714 2.805-.188 2.805-1.628V8.688c0-1.44-1.555-2.342-2.805-1.628L12 11.03v-2.34c0-1.44-1.555-2.343-2.805-1.629l-7.108 4.062c-1.26.72-1.26 2.536 0 3.256l7.108 4.061z" />
                 </svg>
             </button>
+         </div>
+         <div class="flex items-center justify-center px-4 gap-3">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7 text-gray-50">
+               <path stroke-linecap="round" stroke-linejoin="round" d="M17.25 9.75L19.5 12m0 0l2.25 2.25M19.5 12l2.25-2.25M19.5 12l-2.25 2.25m-10.5-6l4.72-4.72a.75.75 0 011.28.531V19.94a.75.75 0 01-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.506-1.938-1.354A9.01 9.01 0 012.25 12c0-.83.112-1.633.322-2.395C2.806 8.757 3.63 8.25 4.51 8.25H6.75z" />
+             </svg>
+            <input type="range" min="1" max="99" value="30" class="track-volume w-full h-1 bg-gray-400 rounded-full cursor-pointer appearance-none focus:outline-none overflow-hidden">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-7 h-7 text-gray-50">
+               <path stroke-linecap="round" stroke-linejoin="round" d="M19.114 5.636a9 9 0 010 12.728M16.463 8.288a5.25 5.25 0 010 7.424M6.75 8.25l4.72-4.72a.75.75 0 011.28.53v15.88a.75.75 0 01-1.28.53l-4.72-4.72H4.51c-.88 0-1.704-.507-1.938-1.354A9.01 9.01 0 012.25 12c0-.83.112-1.633.322-2.396C2.806 8.756 3.63 8.25 4.51 8.25H6.75z" />
+             </svg>
          </div>
       </div>
    </main>
