--- a/projects/analog-clock/index.html
+++ b/projects/analog-clock/index.html
@@ -10,7 +10,7 @@
 <body class="font-figtree flex items-center justify-center min-h-screen bg-white">
   
   <main class="flex p-2 rounded-[4rem] bg-gradient-to-b from-black/75 to-black">
-    <div class="relative flex items-center justify-center before:content('') before:absolute before:w-4 before:h-4 before:rounded-full before:bg-gray-900 before:z-10 after:content('') after:absolute after:w-2 after:h-2 after:rounded-full after:bg-red-600 after:z-20 text-center font-bold w-[18.75rem] h-[18.75rem] rounded-full border-2 bg-white border-black">
+    <div class="relative flex items-center justify-center before:content('') before:absolute before:w-4 before:h-4 before:rounded-full before:bg-gray-900 before:z-10 after:content('') after:absolute after:w-2 after:h-2 after:rounded-full after:bg-red-600 after:z-20 text-center font-bold w-[18.75rem] h-[18.75rem] rounded-full border-2 bg-white border-black select-none">
       <div id="hour" class="hand absolute flex items-end justify-center">
         <i class="absolute w-[5px] h-[4.5rem] rounded-lg bg-gray-900"></i>
       </div>
