--- a/projects/analog-clock/index.html
+++ b/projects/analog-clock/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Analog Clock</title>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="../../src/style.css">
 </head>
 <body class="font-figtree flex items-center justify-center min-h-screen bg-white">
   
