--- a/projects/digital-clock/index.html
+++ b/projects/digital-clock/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Clock</title>
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="../../src/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body class="flex min-h-screen items-center justify-center bg-black font-figtree">
