--- a/projects/music-player/index.html
+++ b/projects/music-player/index.html
@@ -4,8 +4,8 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Music Player</title>
-   <link rel="stylesheet" href="/src/style.css">
-   <link rel="stylesheet" href="/src/default.css">
+   <link rel="stylesheet" href="../../src/style.css">
+   <link rel="stylesheet" href="../../src/default.css">
    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
